# obs-mpv

./: CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/package-plugin/: action.yaml
.github/actions/run-gersemi/: action.yaml
.github/scripts/: .Brewfile  Build-Windows.ps1  build-macos  package-macos
.github/scripts/utils.zsh/: setup_ubuntu
.github/workflows/: build-project.yaml  format-fix.yaml
build-aux/: .run-format.zsh
cmake/common/: buildspec_common.cmake  compiler_common.cmake
data/locale/: en-US.ini
src/: mpv-dock.cpp  mpv-dock.hpp  mpv-sub-dialog.cpp  mpv-sub-dialog.hpp  obs-mpv-source.cpp  obs-mpv-source.hpp  playlist-table-widget.cpp  playlist-table-widget.hpp  plugin-main.cpp
